--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3452,7 +3452,7 @@ nav ul a span.badge {
 
 .row .col.s4 {
   width: 33.3333333333%;
-  margin-left: auto;
+  margin:auto;
   left: auto;
   right: auto;
 }
