--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,19 @@ p {
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
-    top: 40%;
+    top: 0;
   }
   #index-banner .section {
     top: 10%;
   }
 }
 
+
 @media only screen and (max-width : 600px) {
+  .parallax-container .section {
+    position: absolute;
+    top: 0;
+  }
   #index-banner .section {
     top: 0;
   }
@@ -86,4 +91,23 @@ footer.page-footer {
 .hello{
   color:goldenrod;
 
+}
+
+.side-nav li > a {
+    color:#daa520;
+    font-family: 'Berkshire Swash', cursive;
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 32px;
+}
+
+.side-nav {
+  background:black;
+}
+
+.namefooter{
+  color:red;
 }
