--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -22,6 +22,8 @@
 btn:focus, .btn-large:focus, .btn-floating:focus {
     background-color: black;
     color:red;
+    font-family: 'Permanent Marker', cursive;
+
 }
 
 h1,h5{
